basic style update

--- a/css/hp.css
+++ b/css/hp.css
@@ -17,7 +17,7 @@ h5{
 }
 
 body{
-	font-family: Optima, "Avenir Next", Avenir, Calibri, Arial, sans-serif;
+	font-family: Optima, "Avenir Next", Avenir, Helvetica, sans-serif;
     color: #000;
 }
 
